--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <section id="sobre mi">
         <div> 
-            <img src="images/img/imagen en blanco.png" alt="">
+            <img src="./images/img/imagen en blanco.png" alt="">
         </div>
         
             <p class="titulo-seccion">Sobre Mi</p>
